responsive deasign start

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header class="banner">
     <nav class="navber">
       <label class="logo">Fitness</label>
@@ -54,10 +55,10 @@
    <main>
      <!-- Change Your Habits section start -->
       <section class="change_habits">
-        <h2 class="section_header">
+        <h2 class="section_header text_align">
           Change Your Habits
         </h2>
-        <p class="section_discribtion">
+        <p class="section_discribtion text_align">
           We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
         </p>
         <div class="change_habits_details">
@@ -83,6 +84,20 @@
          </div>
         </div>
       </section>
+        <!-- Run an Extra Mile Easily -->
+
+         <section class="run_extra">
+         <div class="run_extra_child">
+          <h2 class="section_header">
+            Run an Extra Mile Easily
+          </h2>
+          <p class="section_discribtion">
+            We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.
+          </p>
+          <button type="button" class="stay_btn">Join Now</button>
+         </div>
+         <img class="run_extra_img" src="images/run.jpg" alt="">
+         </section>
    </main>
    <footer>
 
