--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="main_container">
       <div class="stay_healthy">
           <h3 class="stay_healthy_header">Get body in <span class="stay_healthy_span">shape</span> & stay healthy</h3>
-          <p class="stay_healthy_discribstion">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+          <p class="section_discribtion">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
           <button type="button" class="stay_btn">Join Club Now!</button>
           <button type="button" class="stay_btn stay_btn_two">Download App</button>
       </div>
@@ -98,6 +98,8 @@
          </div>
          <img class="run_extra_img" src="images/run.jpg" alt="">
          </section>
+
+         
    </main>
    <footer>
 
