--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
 <link href="https://fonts.googleapis.com/css2?family=Grey+Qo&display=swap" rel="stylesheet">
+<!-- font Awesome -->
+<script src="https://kit.fontawesome.com/27e6000101.js" crossorigin="anonymous"></script>
 
    <!-- link stylesheet -->
 
@@ -25,14 +27,17 @@
         <li><a href="" class="nav_list">Contact</a></li>
         <li class="nav_list_style"><a href="" class="nav_list ">About</a></li>
       </ul>
+      <div class="icon">
+        <i class="fa-solid fa-bars"></i>
+      </div>
     </nav>
       <!-- banner style start in header -->
     <div class="main_container">
       <div class="stay_healthy">
           <h3 class="stay_healthy_header">Get body in <span class="stay_healthy_span">shape</span> & stay healthy</h3>
           <p class="section_discribtion">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
-          <button type="button" class="stay_btn">Join Club Now!</button>
-          <button type="button" class="stay_btn stay_btn_two">Download App</button>
+          <button type="button" class="banner_btn">Join Club Now!</button>
+          <button type="button" class="banner_btn stay_btn_two">Download App</button>
       </div>
 
        <div>
@@ -54,6 +59,7 @@
   </header>
    <main>
      <!-- Change Your Habits section start -->
+
       <section class="change_habits">
         <h2 class="section_header text_align">
           Change Your Habits
@@ -84,7 +90,8 @@
          </div>
         </div>
       </section>
-        <!-- Run an Extra Mile Easily -->
+        
+      <!-- Run an Extra Mile Easily -->
 
          <section class="run_extra">
          <div class="run_extra_child">
@@ -98,7 +105,8 @@
          </div>
          <img class="run_extra_img" src="images/run.jpg" alt="">
          </section>
-          <!-- BMI Calculator section start -->         
+
+          <!-- BMI Calculator section start -->
           <section >
             <div class="bmi_calculator">
               <h3 class="section_header">
