--- a/index.html
+++ b/index.html
@@ -245,6 +245,9 @@
                 </div>
             </div>
           </section>
+          <section>
+                 
+          </section>
 
    </main>
    <footer class="bmi_main_container">
