unique section design and responsive

--- a/index.html
+++ b/index.html
@@ -245,8 +245,57 @@
                 </div>
             </div>
           </section>
-          <section>
-                 
+          <!-- Stay up to date start -->
+
+          <section class="stay_date">
+           <div class="stay_main_container">
+            <div class="stay_frist_container" >
+              <h2 class="section_header text_align">Stay up to date</h2>
+              <p class="section_discribtion text_align">Sign up below to receive our newest workout routines, recipes, news stories, and offers from our partners</p>
+            <div>
+              <input type="text" placeholder="Frist Name" class="last_bmi_box">
+              <input type="Email" placeholder="Enter Your Email Address" class="last_bmi_box">
+            </div>
+            <div class="readio_battun">
+              <input type="radio" id="Both" value="Both" name="gender">
+              <label for="Both">Both</label> 
+
+              <input type="radio" id="Men" value="Men" name="gender">
+              <label for="Men">Men</label> 
+
+              <input type="radio" id="Women" value="Women" name="gender">
+              <label for="Women">Women</label> 
+            </div>
+
+            <div class="checkbox">
+              <input class="checkbox" type="checkbox" value="Fitness HERS promotions">Fitness HERS promotions
+            </div>
+             <div class="checkbox">
+              <input class="checkbox" type="checkbox" value="Muscle & Fitness FLEX Promotions">Fitness FLEX Promotions
+             </div>
+              <button type="button" class="banner_btn stay_btn_two">SUBSCEIB</button>
+        </div>
+              
+        <div class="stay_second_container text_align">
+            <label for="" class="ssc_header ">muscle & fitness</label>
+            <p class="ssc_header ">follow us</p>
+
+            <div class="sociallogo_container">
+              <div class="sociamedia_logo">
+                <i class="fa-brands fa-facebook"></i>
+              </div>
+              <div class="sociamedia_logo">
+                <i class="fa-brands fa-youtube"></i>
+              </div>
+              <div class="sociamedia_logo">
+                <i class="fa-solid fa-x"></i>
+              </div>
+              <div class="sociamedia_logo">
+                <i class="fa-brands fa-pinterest"></i>
+              </div>
+            </div>
+        </div>  
+           </div> 
           </section>
 
    </main>
