last update redio button

--- a/index.html
+++ b/index.html
@@ -256,15 +256,21 @@
               <input type="text" placeholder="Frist Name" class="last_bmi_box">
               <input type="Email" placeholder="Enter Your Email Address" class="last_bmi_box">
             </div>
-            <div class="readio_battun">
-              <input type="radio" id="Both" value="Both" name="gender">
-              <label for="Both">Both</label> 
+            <div class="readio_battuns">
+              <div class="readio_battun">
+                <input type="radio" id="both" value="Both" name="gender">
+                <label for="both">Both</label> 
+              </div>
 
-              <input type="radio" id="Men" value="Men" name="gender">
-              <label for="Men">Men</label> 
+              <div class="readio_battun">
+                <input type="radio" id="men" value="Men" name="gender">
+               <label for="men">Men</label>
+              </div> 
 
-              <input type="radio" id="Women" value="Women" name="gender">
-              <label for="Women">Women</label> 
+              <div class="readio_battun">
+                <input type="radio" id="women" value="Women" name="gender">
+               <label for="women">Women</label> 
+              </div>
             </div>
 
             <div class="checkbox">
